--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-5">Mové <br> app</h1>
+        <h1 class="text-center my-5">Mové2 <br> app</h1>
         <form id="formulario">
             <input 
                 type="text"
